--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello world 2019221006 고보은...
+<!DOCTYPE HTML>
+<html>
+     <head>
+          <title>디지털 퍼블리싱2 사이트</title>
+          <meta charset="utf-8" />
+          <!-- euc-kr,utf-8 -->
+          <meta name="author" content="고보은" />
+     </head>
+     <body>
+          <a href="traning.html">HTML연습</a>
+     </body>
+</html>
