--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
           <meta name="author" content="고보은" />
      </head>
      <body>
-          <a href="traning.html">HTML연습</a>
+          <a href="training.html">HTML연습</a>
+          <br />
+          <a href="html_part1.html">자유주제</a>
+
      </body>
 </html>
+<br />hello world 고보은...
