--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
           <a href="training.html">HTML연습</a>
           <br />
           <a href="html_part1.html">자유주제</a>
+          <br />
+          <a href="html5.html">html5</ahref>
 
      </body>
 </html>
