--- a/training.html
+++ b/training.html
@@ -141,6 +141,10 @@
          <span>내용</span>
          <!-- 의미없이 사용하는 경우가 많음  -->
          
+         <!-- form 양식지 -->
+         <form>
+            <input type="text" placeholder="아이디를 입력해 주세요">
+         </form>
 
 </body>
 
