--- a/training.html
+++ b/training.html
@@ -144,7 +144,24 @@
          <!-- form 양식지 -->
          <form>
             <input type="text" placeholder="아이디를 입력해 주세요">
+            <input type="password" placeholder="비밀번호를 입력해 주세요">
+            <!-- radio는 name이 중요함, 같은 라디오는 같은name-->
+            <input type="radio" name="bt1" value="1">
+            <input type="radio" name="bt2" value="2">
+            <input type="radio" name="bt3" value="3">
+
+            <input type="radio" name="bt1" value="1">
+            <input type="radio" name="bt1" value="2">
+            <input type="radio" name="bt1" value="3">
+
+            <input type="checkbox" checked/>
+            <input type="checkbox" checked/>
+            <input type="checkbox" checked/>
+        
+
+
          </form>
+        
 
 </body>
 
