--- a/training.html
+++ b/training.html
@@ -7,7 +7,7 @@
          <meta chareset="utf-8">
          <link  rel="stylesheet" type="text/css"href="default.css"/>
          <style>
-         h1{ㅌㄴ
+         h1{
              color: blue;
          }
          h2{
@@ -76,8 +76,8 @@
           <a href="./../DP2019/training.html"> 버튼 </a>
 
           <!-- img tag -->
-          <img src="images/zzang gooooo.jpeg" width="100px"/>
-          <img src="./images/zzang gooooo.jpeg" height="100px"/>
+          <img src="images/다운로드.jpeg" width="100px"/>
+          <img src="./images/다운로드.jpeg" height="100px"/>
         
        
          <!-- strong,em <>b, i -->
