--- a/training.html
+++ b/training.html
@@ -76,7 +76,7 @@
           <a href="./../DP2019/training.html"> 버튼 </a>
 
           <!-- img tag -->
-          <img src="images/다운로드.jpeg" width="100px"/>
+          <img src="./images/다운로드.jpeg" width="100px"/>
           <img src="./images/다운로드.jpeg" height="100px"/>
         
        
