--- a/training.html
+++ b/training.html
@@ -75,7 +75,7 @@
           <!-- a,anchor 닻 -->
           <a href="./../DP2019/training.html"> 버튼 </a>
 
-          <!-- img tag -->
+          <!-- img tag. -->
           <img src="./images/다운로드.jpeg" width="100px"/>
           <img src="./images/다운로드.jpeg" height="100px"/>
         
