--- a/training.html
+++ b/training.html
@@ -76,8 +76,8 @@
           <a href="./../DP2019/training.html"> 버튼 </a>
 
           <!-- img tag. -->
-          <img src="./images/다운로드.jpeg" width="100px"/>
-          <img src="./images/다운로드.jpeg" height="100px"/>
+          <img src="./images/zzang.jpeg" width="100px"/>
+          <img src="./images/zzang.jpeg" height="100px"/>
         
        
          <!-- strong,em <>b, i -->
