--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
           <a href="html5.html">html5</a>
           <br />
           <a href="css.html">css</a>
+          <br />
+          <a href="layout1.html">layout1</a>
 
      </body>
 </html>
