--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <a href="css.html">css</a>
           <br />
           <a href="layout1.html">layout1</a>
-        
+        <br />
+        <a href="layout2.html">layout2</a>
 
      </body>
 </html>
