--- a/layout3.html
+++ b/layout3.html
@@ -88,6 +88,232 @@
                         </div>
                     </li>
                 </ul>
+                <div class="short_line"></div>
+            </header>
+            <div id="content">
+                <ul>
+                    <li class="card_part">
+                        <div class="top_visual">
+                            <img src="images/layout3_img2.jpg">
+                            <div>Photoshop Design</div>
+                        </div>
+                        <div class="bottom_info">
+                            <dl>
+                                <dt>Dulux Colour Awards</dt>
+                                <dd>
+                                    <div>12th October 2011</div>
+                                    <p>A direct mail kit that announces 
+                                        the Dulux Colour Awards Competition
+                                        has commenced. A collection of posters 
+                                        showing the famous colours of history,
+                                        advertises you add your own colours 
+                                        to history.
+                                    </p>
+                                    <div>Read On →</div>
+                                </dd>
+                            </dl>
+                        </div>
+                    </li><div class="short_line"></div>
+                </header>
+                <div id="content">
+                    <ul>
+                        <li class="card_part">
+                            <div class="top_visual">
+                                <img src="images/layout3_img3.jpg">
+                                <div>Photoshop Design</div>
+                            </div>
+                            <div class="bottom_info">
+                                <dl>
+                                    <dt>Dulux Colour Awards</dt>
+                                    <dd>
+                                        <div>12th October 2011</div>
+                                        <p>A direct mail kit that announces 
+                                            the Dulux Colour Awards Competition
+                                            has commenced. A collection of posters 
+                                            showing the famous colours of history,
+                                            advertises you add your own colours 
+                                            to history.
+                                        </p>
+                                        <div>Read On →</div>
+                                    </dd>
+                                </dl>
+                            </div>
+                        </li><div class="short_line"></div>
+                    </header>
+                    <div id="content">
+                        <ul>
+                            <li class="card_part">
+                                <div class="top_visual">
+                                    <img src="images/layout3_img4.jpg">
+                                    <div>Photoshop Design</div>
+                                </div>
+                                <div class="bottom_info">
+                                    <dl>
+                                        <dt>Dulux Colour Awards</dt>
+                                        <dd>
+                                            <div>12th October 2011</div>
+                                            <p>A direct mail kit that announces 
+                                                the Dulux Colour Awards Competition
+                                                has commenced. A collection of posters 
+                                                showing the famous colours of history,
+                                                advertises you add your own colours 
+                                                to history.
+                                            </p>
+                                            <div>Read On →</div>
+                                        </dd>
+                                    </dl>
+                                </div>
+                            </li><div class="short_line"></div>
+                        </header>
+                        <div id="content">
+                            <ul>
+                                <li class="card_part">
+                                    <div class="top_visual">
+                                        <img src="images/layout3_img5.jpg">
+                                        <div>Photoshop Design</div>
+                                    </div>
+                                    <div class="bottom_info">
+                                        <dl>
+                                            <dt>Dulux Colour Awards</dt>
+                                            <dd>
+                                                <div>12th October 2011</div>
+                                                <p>A direct mail kit that announces 
+                                                    the Dulux Colour Awards Competition
+                                                    has commenced. A collection of posters 
+                                                    showing the famous colours of history,
+                                                    advertises you add your own colours 
+                                                    to history.
+                                                </p>
+                                                <div>Read On →</div>
+                                            </dd>
+                                        </dl>
+                                    </div>
+                                </li><div class="short_line"></div>
+                            </header>
+                            <div id="content">
+                                <ul>
+                                    <li class="card_part">
+                                        <div class="top_visual">
+                                            <img src="images/layout3_img6.jpg">
+                                            <div>Photoshop Design</div>
+                                        </div>
+                                        <div class="bottom_info">
+                                            <dl>
+                                                <dt>Dulux Colour Awards</dt>
+                                                <dd>
+                                                    <div>12th October 2011</div>
+                                                    <p>A direct mail kit that announces 
+                                                        the Dulux Colour Awards Competition
+                                                        has commenced. A collection of posters 
+                                                        showing the famous colours of history,
+                                                        advertises you add your own colours 
+                                                        to history.
+                                                    </p>
+                                                    <div>Read On →</div>
+                                                </dd>
+                                            </dl>
+                                        </div>
+                                    </li><div class="short_line"></div>
+                                </header>
+                                <div id="content">
+                                    <ul>
+                                        <li class="card_part">
+                                            <div class="top_visual">
+                                                <img src="images/layout3_img7.jpg">
+                                                <div>Photoshop Design</div>
+                                            </div>
+                                            <div class="bottom_info">
+                                                <dl>
+                                                    <dt>Dulux Colour Awards</dt>
+                                                    <dd>
+                                                        <div>12th October 2011</div>
+                                                        <p>A direct mail kit that announces 
+                                                            the Dulux Colour Awards Competition
+                                                            has commenced. A collection of posters 
+                                                            showing the famous colours of history,
+                                                            advertises you add your own colours 
+                                                            to history.
+                                                        </p>
+                                                        <div>Read On →</div>
+                                                    </dd>
+                                                </dl>
+                                            </div>
+                                        </li><div class="short_line"></div>
+                                    </header>
+                                    <div id="content">
+                                        <ul>
+                                            <li class="card_part">
+                                                <div class="top_visual">
+                                                    <img src="images/layout3_img9.jpg">
+                                                    <div>Photoshop Design</div>
+                                                </div>
+                                                <div class="bottom_info">
+                                                    <dl>
+                                                        <dt>Dulux Colour Awards</dt>
+                                                        <dd>
+                                                            <div>12th October 2011</div>
+                                                            <p>A direct mail kit that announces 
+                                                                the Dulux Colour Awards Competition
+                                                                has commenced. A collection of posters 
+                                                                showing the famous colours of history,
+                                                                advertises you add your own colours 
+                                                                to history.
+                                                            </p>
+                                                            <div>Read On →</div>
+                                                        </dd>
+                                                    </dl>
+                                                </div>
+                                            </li><div class="short_line"></div>
+                                        </header>
+                                        <div id="content">
+                                            <ul>
+                                                <li class="card_part">
+                                                    <div class="top_visual">
+                                                        <img src="images/layout3_img10.jpg">
+                                                        <div>Photoshop Design</div>
+                                                    </div>
+                                                    <div class="bottom_info">
+                                                        <dl>
+                                                            <dt>Dulux Colour Awards</dt>
+                                                            <dd>
+                                                                <div>12th October 2011</div>
+                                                                <p>A direct mail kit that announces 
+                                                                    the Dulux Colour Awards Competition
+                                                                    has commenced. A collection of posters 
+                                                                    showing the famous colours of history,
+                                                                    advertises you add your own colours 
+                                                                    to history.
+                                                                </p>
+                                                                <div>Read On →</div>
+                                                            </dd>
+                                                        </dl>
+                                                    </div>
+                                                </li><div class="short_line"></div>
+                                            </header>
+                                            <div id="content">
+                                                <ul>
+                                                    <li class="card_part">
+                                                        <div class="top_visual">
+                                                            <img src="images/layout3_img11.jpg">
+                                                            <div>Photoshop Design</div>
+                                                        </div>
+                                                        <div class="bottom_info">
+                                                            <dl>
+                                                                <dt>Dulux Colour Awards</dt>
+                                                                <dd>
+                                                                    <div>12th October 2011</div>
+                                                                    <p>A direct mail kit that announces 
+                                                                        the Dulux Colour Awards Competition
+                                                                        has commenced. A collection of posters 
+                                                                        showing the famous colours of history,
+                                                                        advertises you add your own colours 
+                                                                        to history.
+                                                                    </p>
+                                                                    <div>Read On →</div>
+                                                                </dd>
+                                                            </dl>
+                                                        </div>
+                                                    </li>
             </div>
             <footer>footer</footer>
         </div>
