--- a/training.html
+++ b/training.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="kr">
     <head>
          <title>html연습</title>
          <a href="index.html">뒤로가기</a>
@@ -176,6 +176,10 @@
 
             <!-- 제출 버튼 -->
             <input type="submit" value="제출" />
+"
+            <img src="images/layout3_img6.jpg"alt="thumnail"/>
+                                                <!-- 대체 텍스트 -->
+            <a hresf="http://www.google.com" title="구글로 이동합니다.">구글</a>
             
 
          </form>
