--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <a href="layout2.html">layout2</a>
         <br/>
         <a href="layout3.html">layout3</a>
-
+        <br />
+        <a href="freelayout.html">freelayout</a>
      </body>
 </html>
 
